# tinfoilhat

./: README.md  check_hackrf.py  init_db.py  migrate_db.py  pyproject.toml  requirements.txt  run.py  setup.bat  setup.sh  tox.ini
.github/workflows/: ci.yml
docs/: CNAME  index.html
docs/static/img/: tfh-thotcon.eps
flyer_print_copies/: prizes_flyer.html  rf_attenuation_flyer.html  rules_flyer.html
landing_page/: index.html
tests/: __init__.py  test_app.py  test_db.py  test_main.py  test_migrate_db.py  test_scanner.py
tinfoilhat/: __init__.py  __main__.py  app.py  db.py  migrate_db.py  routes.py  scanner.py  schema.sql
tinfoilhat/static/js/: billboard.js
tinfoilhat/static/js/components/: ChartManager.js  DataManager.js  ErrorHandler.js  EventHandler.js  LeaderboardManager.js  UIManager.js
tinfoilhat/templates/: admin.html  billboard.html  index.html  prizes_flyer.html  rf_attenuation_flyer.html  rules_flyer.html
